--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
-# reclassifies `.php` files as PHP (not Hacklang):
+# override GitHub linguist:
+*.css linguist-language=CSS
+*.js linguist-language=JavaScript
 *.php linguist-language=PHP
